# absurd

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  absurdctl  docker-compose.yaml  zensical.toml
.claude/commands/: make-migration.md  make-release.md  update-changelog.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  repro-clock-mutation.yml  test-java.yml  test.yml
.pi/prompts/: make-release.md
docs/: absurdctl.md  agents.md  cleanup.md  comparison.md  concepts.md  database.md  habitat.md  index.md  patterns.md  quickstart.md  sdk-go.md  sdk-python.md  sdk-typescript.md  storage.md
docs/javascripts/: home-link.js
docs/patterns/: cron.md  deployments.md  index.md  living-with-code-changes.md  pi-ai-agent.md  pydantic-ai-agent.md
docs/plans/: 2026-03-02-assistant-design.md  2026-03-02-assistant-plan.md  2026-03-02-recurring-tasks-design.md  2026-03-02-recurring-tasks-plan.md
docs/sdks/: go.md  index.md  python.md  typescript.md
docs/stylesheets/: extra.css
docs/tools/: absurdctl.md  habitat.md  index.md
habitat/: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  go.mod  go.sum
habitat/cmd/habitat/: main.go
habitat/internal/auth/: auth.go  session.go
habitat/internal/config/: config.go  config_test.go
habitat/internal/server/: handlers.go  handlers_tasks_test.go  prefix_test.go  server.go
habitat/internal/web/: static.go
habitat/scripts/: shoreman.sh
habitat/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
habitat/ui/src/: App.tsx  app.css  index.tsx
scripts/: absurdctl  build-absurdctl  prepare-release.sh  release.sh  repro-clock-mutation.sh  validate-psql.py
sdks/go/: README.md  TODO.md  absurd.go  client.go  client_test.go  context.go  errors.go  go.mod  go.sum  go.work  go.work.sum  task_context.go  task_definition.go  task_run.go  types.go  util.go  worker.go
sdks/go/absurd/: README.md  TODO.md  absurd.go  absurd_test.go  connection_defaults_test.go  context.go  context_compat_test.go  context_test.go  errors.go  go.mod  go.sum  options.go  schema.go  task.go  worker.go
sdks/go/absurdtest/: absurd_test.go  go.mod  (+2 more)
sdks/java/: build.gradle  settings.gradle
sdks/php/: .env  composer.json  docker-compose.yml
sdks/python/: README.md  pyproject.toml
sdks/python/examples/pydantic-ai-agent/: client.py  worker.py
sdks/python/examples/quickstart/: client.py  worker.py
sdks/python/src/absurd_sdk/: __init__.py
sdks/python/tests/: conftest.py  test_absurd.py  test_connection_defaults.py  test_events.py  test_events_compat.py  test_heartbeat.py  test_hooks.py  test_idempotency.py  test_queue_policy.py  test_queue_validation.py  test_retry.py  test_retry_task.py  test_step.py  test_task_context.py  test_task_result.py
sdks/rust/: Cargo.toml  GETTING_STARTED.md  README.md
sdks/rust/examples/: basic_transfer.rs  cross_border.rs  hello_world.rs
sdks/rust/src/: client.rs  context.rs  error.rs  executor.rs  lib.rs  types.rs  worker.rs
sdks/rust/tests/: integration_tests.rs
sdks/typescript/: README.md  package-lock.json  package.json  provision.sh  tsconfig.build.json  tsconfig.cjs.json  tsconfig.json  typedoc.json  vitest.config.ts
sql/: 00_schema.sql  01_internals.sql  02_queue_mgmt.sql  02_send.sql  03_lowlevel.sql  03_read.sql  04_delete.sql  04_tasks.sql  05_events.sql  05_set_vt.sql  06_checkpoints.sql  06_queue_mgmt.sql  07_metrics.sql  07_tasks.sql  08_metrics.sql  absurd.sql
sql/migrations/: 0.0.3-0.0.4.sql  0.0.4-0.0.5.sql  0.0.4-main.sql  0.0.4.sql  0.0.5-0.0.6.sql  0.0.5.sql  0.0.6-0.0.7.sql  0.0.6.sql  0.0.7-0.0.8.sql  0.0.8-main.sql  0.1.0-0.1.1.sql  0.1.1-0.2.0.sql  0.1.1-main.sql  0.2.0-0.3.0.sql  0.2.0-main.sql  0.3.0-0.4.0.sql  0.3.0-main.sql  0.4.0-main.sql
tests/: conftest.py  pyproject.toml  test_absurdctl_validation.py  test_build_absurdctl.py  test_checkpoints.py  test_claim_maintenance.py  test_cleanup.py  test_cron.py  test_cron_pgcron_e2e.py  test_events.py  test_extend_claim.py  test_idempotent_spawn.py  test_partition_detach.py  test_partition_utils.py  test_queue_management.py  test_retry_and_cancellation.py  test_retry_task.py  test_schedules.py  test_schema_version.py  test_state_transitions.py  test_task_lifecycle.py  test_task_results.py
tests/docker/pg16-pgcron/: Dockerfile
(+110 files in other folders)
